# afv-native

./: .clang-format  .gitignore  .gitmodules  ALL_LICENSES.txt  CMakeLists.txt  Findafv-native.cmake  Findafv_native.cmake  README.md  afv_native_export.h  afv_native_includes.in  build-mac-debug.sh  build.sh  compile_licenses.py  conanfile.py  vcpkg.json
.github/: build.yml
.github/workflows/: build.yml  release.yml
cmake/: afv_native-config.cmake.in
include/afv-native/: AFVatcClientWrapper.h  Client.h  Log.h  atcClient.h  atcClientFlat.h  atcClientWrapper.h  atisClient.h  event.h  hardwareType.h  utility.h
include/afv-native/afv/: APISession.h  ATCInputMixer.h  ATCRadioSimulation.h  ATCRadioStack.h  EffectResources.h  RadioSimulation.h  RemoteVoiceSource.h  RollingAverage.h  VoiceCompressionSink.h  VoiceSession.h  params.h
include/afv-native/afv/dto/: AuthRequest.h  CrossCoupleGroup.h  PostCallsignResponse.h  Station.h  StationTransceiver.h  Transceiver.h  VoiceServerConnectionData.h
include/afv-native/afv/dto/domain/: RxTransceiver.h  TxTransceiver.h
include/afv-native/afv/dto/interfaces/: IAudio.h  IAudioDirect.h  IAudioVoiceRoom.h
include/afv-native/afv/dto/voice_server/: AudioOnDirect.h  AudioRxOnTransceivers.h  AudioTxOnTransceivers.h  Heartbeat.h
include/afv-native/audio/: AudioDevice.h  BiQuadFilter.h  FilterSource.h  IFilter.h  ISampleSink.h  ISampleSource.h  ISampleStorage.h  ITick.h  MiniAudioDevice.h  OutputDeviceState.h  OutputMixer.h  PinkNoiseGenerator.h  RecordedSampleSource.h  SimpleCompressorEffect.h  SineToneSource.h  SinkFrameSizeAdjuster.h  SourceFrameSizeAdjuster.h  SourceStatus.h  SourceToSinkAdapter.h  SpeexPreprocessor.h  VHFFilterSource.h  WavFile.h  WavSampleStorage.h  WhiteNoiseGenerator.h  also-warn-fix.patch  audio_params.h  miniaudio.h.mod.old
include/afv-native/cryptodto/: Channel.h  SequenceTest.h  UDPChannel.h  params.h
include/afv-native/cryptodto/dto/: ChannelConfig.h  Header.h  ICryptoDTO.h
include/afv-native/event/: EventCallbackTimer.h  EventTimer.h
include/afv-native/http/: EventTransferManager.h  RESTRequest.h  Request.h  TransferManager.h  http.h
include/afv-native/util/: ChainedCallback.h  base64.h  monotime.h  other.h
src/: AFVatcClientWrapper.cpp  NativeWrapper.cpp  atcClientFlat.cpp  atcClientWrapper.cpp
src/afv/: APISession.cpp  ATCInputMixer.cpp  ATCRadioSimulation.cpp  ATCRadioStack.cpp  EffectResources.cpp  RadioSimulation.cpp  RemoteVoiceSource.cpp  VoiceCompressionSink.cpp  VoiceSession.cpp
src/afv/dto/: AuthRequest.cpp  CrossCoupleGroup.cpp  PostCallsignResponse.cpp  Station.cpp  StationTransceiver.cpp  Transceiver.cpp  VoiceServerConnectionData.cpp
src/audio/: AudioDevice.cpp  BiQuadFilter.cpp  FilterSource.cpp  MiniAudioAudioDevice.cpp  MiniAudioAudioDevice.h  MiniAudioDevice.cpp  OutputDeviceState.cpp  OutputMixer.cpp  RecordedSampleSource.cpp  SimpleCompressorEffect.cpp  SineToneSource.cpp  SinkFrameSizeAdjuster.cpp  SourceFrameSizeAdjuster.cpp  SourceToSinkAdapter.cpp  SpeexPreprocessor.cpp  VHFFilterSource.cpp  WavFile.cpp  WavSampleStorage.cpp
src/core/: Client.cpp  Log.cpp  atcClient.cpp  atisClient.cpp
src/cryptodto/: Channel.cpp  SequenceTest.cpp  UDPChannel.cpp
src/cryptodto/dto/: ChannelConfig.cpp  Header.cpp
src/event/: EventCallbackTimer.cpp  EventTimer.cpp
src/http/: EventTransferManager.cpp  RESTRequest.cpp  Request.cpp  TransferManager.cpp
src/util/: base64.cpp  monotime.cpp
